tests/fixtures/type_errors/builtin_tcp_connect_arity.airl
;; ERROR: expects 2 arguments, got 1
;; tcp-connect requires (String, Int)
(tcp-connect "localhost")
